[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datalogger"
version = "0.3.0"
description = "Python package for logging data from scientific experiments."
authors = ["Alex Hadley <contact@alexhadley.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/PainterQubits/datalogger"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.9.0"
numpy = "^1.26.3"
xarray = "^2023.12.0"
netcdf4 = "^1.6.5"
paramdb = { version = "^0.10.2", optional = true }

[tool.poetry.extras]
paramdb = ["paramdb"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^6.1.0"
pylint = "^3.0.3"
black = "^23.12.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
freezegun = "^1.4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
furo = "^2023.9.10"
sphinx-copybutton = "^0.5.2"
jupyter-sphinx = "^0.5.3"
ipykernel = "^6.28.0"
directory-tree = "^0.0.4"
sphinx-autobuild = "^2021.3.14"

[tool.mypy]
strict = true

[tool.pylint.basic]
good-names-rgxs = ["^[a-z][a-z0-9]?$"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = [
    # See https://github.com/pydata/xarray/issues/7259
    "ignore:numpy.ndarray size changed",
]
