[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datalogger"
version = "0.3.1"
description = "Python package for logging data from scientific experiments."
authors = ["Alex Hadley <contact@alexhadley.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/PainterQubits/datalogger"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.10.0"
numpy = "^1.26.4"
xarray = "^2024.2.0"
netcdf4 = "^1.6.5"
paramdb = { version = "^0.11.0", optional = true }

[tool.poetry.extras]
paramdb = ["paramdb"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
black = "^24.2.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
freezegun = "^1.4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
furo = "^2024.1.29"
sphinx-copybutton = "^0.5.2"
jupyter-sphinx = "^0.5.3"
ipykernel = "^6.29.2"
directory-tree = "^0.0.4"
sphinx-autobuild = "^2024.2.4"

[tool.mypy]
strict = true

[tool.pylint.basic]
good-names-rgxs = ["^[a-z][a-z0-9]?$"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = [
    # See https://github.com/pydata/xarray/issues/7259
    "ignore:numpy.ndarray size changed",
]
