[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datalogs"
version = "0.5.1"
description = "Python package for logging data from scientific experiments."
authors = ["Alex Hadley <contact@alexhadley.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/PainterQubits/datalogs"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.12.2"
numpy = "^1.26.4"
xarray = "^2024.7.0"
netcdf4 = "^1.7.1.post2"
paramdb = { version = "^0.15.2", optional = true }

[tool.poetry.extras]
paramdb = ["paramdb"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.1"
pylint = "^3.2.6"
black = "^24.8.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
freezegun = "^1.5.1"

[tool.poetry.group.docs.dependencies]
sphinx = "7.4.7"
myst-parser = "3.0.1"
furo = "^2024.8.6"
sphinx-copybutton = "^0.5.2"
jupyter-sphinx = "^0.5.3"
ipykernel = "^6.29.5"
directory-tree = "^1.0.0"
sphinx-autobuild = "^2024.4.16"

[tool.mypy]
strict = true

[tool.pylint.basic]
good-names-rgxs = ["^[a-z][a-z0-9]?$"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = [
    # See https://github.com/pydata/xarray/issues/7259
    "ignore:numpy.ndarray size changed",
]
